# modb

./: .gitignore  .gitmodules  CMakeLists.txt  DataModels.py  LICENSE  README.md  Sender.py  appsetting.json  bdb_example_load  build_berkeleydb.bash  build_berkeleydb.sh  build_debug.sh  build_modb.bash  build_opensky_api.sh  build_pistache.bash  build_pistache.sh  build_rapidjson.sh  build_spatialindex.bash  build_spatialindex.sh  dataset_json.txt  dataset_load_query.txt  datasource.py  deneme  evaluate_performance.py  evaluate_performance_v2.py  evaluate_performance_v3.py  install_berkeleydb.sh  install_spatialindex.sh  ipc.py  itemname.sdb  load_data.bash  load_query_datasource.py  measure_load_times.py  open_ws_intersection_query.bash  open_ws_load_data.bash  opensky_test.py  pipe.cpp  pipeOpener  pipeOpener.cpp  pre_build.sh  (+3 more)
api_call/: Dto.py
common/: README.md  pipeOpener  pipeOpener.cpp
examples/: CMakeLists.txt
examples/data/: dataset_mixed_long.txt
examples/include/: MyQueryStrategy.hpp
examples/scripts/: measure_load_times.py  test_intersection.bash
examples/scripts/api_call/: DataModels.py
examples/src/: analyze_data.cpp  bdb-test.cpp  intersection_query.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: DropdownLeft.js  MenuContext.js
include/bdb_examples/: MyDb.hpp  gettingStartedCommon.hpp
include/modb/: AtomicDataTypes.h  Broadcaster.h  Collections.h  Common.h  CommonMacros.h  CopyFrom.h  DatabaseManager.h  DatabaseResource.h  DatabaseResource.inl  Deneme.h  GnuPlotter.h  IndexService.h  IndexVisitor.h  IntersectionSendOption.h  List.h  MyQueryStrategy.h  MyVisitor.h  Object.h  Plane.h  Point.h  Rectangle.h  Region.h  SendDataWS.h  SendOption.h  Shape.h  Timer.h
include/mos/: SequenceExample.h
lib/berkeleydb/build_unix/: .gitignore
lib/spatialindex/: CMakeLists.txt
lib/spatialindex/include/spatialindex/tools/: Tools.h
lib/spatialindex/src/: CMakeLists.txt
lib/spatialindex/src/mvrtree/: MVRTree.cc
lib/spatialindex/src/rtree/: RTree.cc
lib/spatialindex/src/tools/: Tools.cc
lib/spatialindex/test/: CMakeLists.txt
lib/spatialindex/test/rtree/: Generator.cc  GeneratorNormalLocation.cc  RTreeLoad.cc  RTreeQuery.cc
lib/spatialindex/test/rtree/test5/: run
modb/: CMakeLists.txt
modb/include/modb/: Common.h  DatabaseManager.h  IndexManager.h  IndexVisitor.h  IntersectionSendOption.h  MyQueryStrategy.h  Object.h  Point.h  Region.h  SendDataWS.h  SendOption.h  Timer.h
modb/src/: IndexManager.cpp  IntersectionSendOption.cpp  Point.cpp
src/: CMakeLists.txt  CopyFrom.cpp  DatabaseResource.Object.cpp  DatabaseResource.Plane.cpp  DatabaseResource.cpp  DatabaseResource.double.cpp  DatabaseResource.float.cpp  DatabaseResource.int.cpp  DatabaseResource.string.cpp  FooWebsocket.cpp  IndexService.cpp  IndexVisitor.cpp  MyVisitor.cpp  Object.cpp  Plane.cpp  Point.cpp  Rectangle.cpp  Region.cpp  SequenceExample.cpp  a.out  bdb-test.cpp  leaf_plot.cpp  main.cpp  test.c  websocket
src/api_call/: DataModels.py  Sender.py  datasource.py  load_query_datasource.py  opensky_test.py  opensky_test_redis.py
src/bdb_examples/: CMakeLists.txt  MyDb.cpp  excxx_example_database_load.cpp  excxx_example_database_read.cpp  itemname.sdb
src/examples/: CMakeLists.txt  analyze_data.cpp  analyze_data_websocket.cpp  analyze_db.cpp  asio_test.cpp  intersection_exhaustive.cpp  intersection_plot.cpp  intersection_query.cpp  intersection_query_websocket.cpp  load_bdb_websocket.cpp  load_data.cpp  load_file.cpp  load_query.cpp  main.cpp  query_exhaustive.cpp  query_modb.cpp  test_exhaustive.cpp  test_modb.cpp
src/modb/: CMakeLists.txt  Common.cpp  DatabaseManager.cpp  DatabaseResource.cpp  IndexService.cpp  IntersectionSendOption.cpp  Object.cpp  Region.cpp  SendDataWS.cpp  Timer.cpp  test_exhaustive.cpp  test_modb.cpp
