link_libraries(modb)

###################################################################

add_executable(load_data
    src/load_data.cpp
)

# add_executable(analyze_data
#     src/analyze_data.cpp
# )

# ###################################################################

# add_executable(intersection_exhaustive 
#     src/intersection_exhaustive.cpp
# )

# add_executable(intersection_query
#     src/intersection_query.cpp
# )

# ###################################################################

# add_executable(asio_test
#     src/asio_test.cpp
# )

# ###################################################################

# add_executable(load_query
#     src/load_query.cpp
# )

# ###################################################################


# add_executable(load_bdb_websocket
#     src/load_bdb_websocket.cpp
# )

# ###################################################################

# add_executable (analyze_data_websocket
#     src/analyze_data_websocket.cpp
# )

# ###################################################################

# add_executable( intersection_query_websocket 
#     src/intersection_query_websocket.cpp
# )

# add_executable(intersection_plot
#     src/intersection_plot.cpp
# )
